deployment/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: podinfo-${branch} 
spec: 
  ingressClassName: nginx 
  rules: 
    - host: "localhost" 
      http: 
        paths: 
          - backend: 
              service: 
                name: podinfo-${branch} 
                port: 
                  number: 9898 
            path: / 
            pathType: Prefix 
          - backend: 
              service: 
                name: podinfo-${branch} 
                port: 
                  number: 9797 
            path: /metrics
            pathType: Prefix
